project(Engine CXX)
include_directories(.)
include_directories(../../External/freetype2/include)
include_directories(../../External/libogg/include)
include_directories(../../External/libpng)
include_directories(../../External/libjpeg)
include_directories(../../External/libvorbis/include)
include_directories(../Framework)
file(GLOB_RECURSE Sources "*.cpp")
file(GLOB_RECURSE WindowsSources "Windows*.cpp")
file(GLOB_RECURSE NetworkSources "Network/*.cpp")
file(GLOB_RECURSE tmp "Gui/Gui.cpp" "Physics/*.cpp" "Thread/main.cpp")
list(REMOVE_ITEM Sources ${WindowsSources} ${NetworkSources} ${ThreadSources} ${tmp})
add_library(engine STATIC ${Sources})
